# Paranoid-Hash

./: Cargo.toml  LICENSE  README.md
examples/: default.rs
src/: lib.rs
tests/: compare_hashes.rs
