[package]
name = "paranoid-hash"
version = "0.5.0"
edition = "2018"
description = "A Hashing Library For Those Paranoid With Their Security"
categories = ["asynchronous","cryptography","filesystem","parsing"]
keywords = ["b2sum", "hashing","blake2b","file-hashing","checksum"]
license = "MIT OR Apache-2.0"
authors = ["AtropineTears"]
repository = "https://github.com/AtropineTears/Paranoid-Hash"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filebuffer = "0.4.0"
blake2-rfc = "0.2.18"
crypto-hash = "0.3.4"
hex = "0.4.2"